java 8 compat for test code - IDE doesn't like List.of